--- a/webapp/src/app/market/market-form/market-form.component.html
+++ b/webapp/src/app/market/market-form/market-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="orderForm" (ngSubmit)="save()">
+<form [formGroup]="marketForm" (ngSubmit)="save()">
   <div class="form-group">
     <label>Employee</label>
     <select class="form-control" formControlName="user" [compareWith]="equals">
