--- a/webapp/src/app/market/market.component.html
+++ b/webapp/src/app/market/market.component.html
@@ -4,7 +4,7 @@
       <h1>Market</h1>
     </div>
     <div class="col-12 col-md-2">
-      <h2><span class="badge badge-secondary" [routerLink]="'/market/add'">New order</span></h2>
+      <h2><span class="badge badge-secondary" [routerLink]="'/market/add'">New market</span></h2>
     </div>
   </div>
   <div class="row">
